// Jest Snapshot v1, https://goo.gl/fbAQLP @generated

exports[`Wallet with BCH balances 1`] = `
Array [
  <div
    className="sc-kEYyzF jJsgEo"
  >
    <h4
      className="sc-jDwBTQ fiRxiA"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-hSdWYo kyjFNV"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <br />,
  <div
    className="sc-eNQAEJ eAXuBE"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="ant-collapse ant-collapse-icon-position-left sc-kAzzGY itTQAx"
          role={null}
          style={
            Object {
              "marginBottom": "24px",
            }
          }
        >
          <div
            className="ant-collapse-item sc-iRbamj dRzFJU"
          >
            <div
              aria-expanded={false}
              className="ant-collapse-header"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <div>
                <span
                  aria-label="right"
                  className="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              XEC Airdrop Calculator
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with BCH balances and tokens 1`] = `
Array [
  <div
    className="sc-kEYyzF jJsgEo"
  >
    <h4
      className="sc-jDwBTQ fiRxiA"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-hSdWYo kyjFNV"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <br />,
  <div
    className="sc-eNQAEJ eAXuBE"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="ant-collapse ant-collapse-icon-position-left sc-kAzzGY itTQAx"
          role={null}
          style={
            Object {
              "marginBottom": "24px",
            }
          }
        >
          <div
            className="ant-collapse-item sc-iRbamj dRzFJU"
          >
            <div
              aria-expanded={false}
              className="ant-collapse-header"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <div>
                <span
                  aria-label="right"
                  className="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              XEC Airdrop Calculator
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet with BCH balances and tokens and state field 1`] = `
Array [
  <div
    className="sc-kEYyzF jJsgEo"
  >
    <h4
      className="sc-jDwBTQ fiRxiA"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-iAyFgw sQyhO"
    >
      0.06
       
      XEC
    </div>
  </div>,
  <br />,
  <div
    className="sc-eNQAEJ eAXuBE"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="ant-collapse ant-collapse-icon-position-left sc-kAzzGY itTQAx"
          role={null}
          style={
            Object {
              "marginBottom": "24px",
            }
          }
        >
          <div
            className="ant-collapse-item sc-iRbamj dRzFJU"
          >
            <div
              aria-expanded={false}
              className="ant-collapse-header"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <div>
                <span
                  aria-label="right"
                  className="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              XEC Airdrop Calculator
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Wallet without BCH balance 1`] = `
Array [
  <div
    className="sc-kEYyzF jJsgEo"
  >
    <h4
      className="sc-jDwBTQ fiRxiA"
    >
      MigrationTestAlpha
    </h4>
    <div
      className="sc-hSdWYo kyjFNV"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <br />,
  <div
    className="sc-eNQAEJ eAXuBE"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="ant-collapse ant-collapse-icon-position-left sc-kAzzGY itTQAx"
          role={null}
          style={
            Object {
              "marginBottom": "24px",
            }
          }
        >
          <div
            className="ant-collapse-item sc-iRbamj dRzFJU"
          >
            <div
              aria-expanded={false}
              className="ant-collapse-header"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <div>
                <span
                  aria-label="right"
                  className="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              XEC Airdrop Calculator
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Without wallet defined 1`] = `
Array [
  <div
    className="sc-kEYyzF jJsgEo"
  >
    <div
      className="sc-hSdWYo kyjFNV"
    >
      You currently have 0 
      XEC
      <br />
      Deposit some funds to use this feature
    </div>
  </div>,
  <br />,
  <div
    className="sc-eNQAEJ eAXuBE"
  >
    <div
      className="ant-row"
      style={Object {}}
      type="flex"
    >
      <div
        className="ant-col ant-col-24"
        style={Object {}}
      >
        <div
          className="ant-collapse ant-collapse-icon-position-left sc-kAzzGY itTQAx"
          role={null}
          style={
            Object {
              "marginBottom": "24px",
            }
          }
        >
          <div
            className="ant-collapse-item sc-iRbamj dRzFJU"
          >
            <div
              aria-expanded={false}
              className="ant-collapse-header"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <div>
                <span
                  aria-label="right"
                  className="anticon anticon-right ant-collapse-arrow"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </div>
              XEC Airdrop Calculator
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
